# goit-pyweb-hw-14

./: .env  READMI.MD  alembic.ini  cert.pem  docker-compose.yml  key.pem  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 30af6b1c4a86_initial_migration.py  926de3d93bea_add_totp_secret_to_users.py  ca6b39042f47_corrected_crated_add.py  d0f5b0bc467f_add_confirmed_field_to_user.py
database/: db.py  models.py  schemas.py
repository/: users.py
routes/: auth.py
services/: auth.py  cloudinary_service.py  email.py  redis_cache.py
services/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  signup.html
source/: conf.py
tests/: test_dashboard.py  test_db.py  test_redis_cash.py  test_repository_users.py  test_users.py
